experiment two finished -able to go prev and next layer setting the layer in opposite direction visible/inivisble. issue: clicking on the layers using sidebar needs fixing as the prev/next buttons have made layers inivisble.

--- a/editor/svg-editor.css
+++ b/editor/svg-editor.css
@@ -171,11 +171,10 @@ select {
 	overflow: auto;
 	text-align: center;
 }
-/*<svg id="canvasBackground" width="202.5" height="151.875" x="590.75" y="152.0625" overflow="none" 
-style="pointer-events:none"><rect width="100%" height="100%" x="0" y="0" stroke="#000" fill="#FFF" 
-style="pointer-events:none"></rect></svg>*/
+
+/*The label nexxt to work area showing the current layer name*/
 #currentlayerdisplay{
-	display: inline-block; /*check what this is*/
+	display: inline-block; 
 	position:relative;
 	height: auto;
 	width:100px;
